src/app/about-me/about-me.component.scss
.aboutMeContent {
  background-color: #141d2f;
  height: 870px;
  display: flex;
  justify-content: center;
  position: relative;
  overflow: hidden;
}

.innerContent {
  max-width: 1920px;
  display: flex;
  width: 100%;
  justify-content: space-between;
}
.aboutMe {
  width: 474px;
  height: 479px;
  color: white;
  display: flex;
  flex-direction: column;
  margin-left: 50px;
  margin-top: 70px;

  h1 {
    font-weight: 700;
    font-size: 90px;
  }
  p {
    font-weight: 400;
    font-size: 16px;
    line-height: 19px;
  }
}

.aboutMeTextBoxTwo {
  gap: 35px;
  display: flex;
  flex-direction: row-reverse;
  img {
    object-fit: contain;
  }
}

.aboutMeTextBoxThree {
  gap: 35px;
  display: flex;
  flex-direction: row-reverse;
  img {
    object-fit: contain;
  }
}

.aboutMePhoto {
  display: flex;
  height: 609px;
  margin-top: 130px;
  img:first-of-type {
    width: 707px;
    height: 671px;
    position: absolute;
    right: 10%;
  }
  img:last-of-type {
    position: absolute;
    right: 2%;
  }
}

@media screen and (max-width: 1300px) {
  .aboutMe{
    padding: 2rem 0rem;
  }
  .aboutMePhoto{
    margin-top: 200px;
  }
  .aboutMePhoto img:first-of-type {
    right: 2%;
    transform: scale(0.75);
  }

  .aboutMePhoto img:last-of-type {
    right: -15%;
    left: unset;
    transform: scale(0.8);
    bottom: 5%;
  }
  .aboutMe h1 {
    font-size: 70px;
  }
}

@media screen and (max-width: 1100px) {
  .aboutMe {
    margin-left: 3%;
    margin-top: 160px;
    padding: 2rem 0rem;
    h1 {
      font-size: 60px;
    }
    p {
      font-size: 15px;
    }
  }
  .aboutMePhoto img:first-of-type {
    right: -9.5%;
    transform: scale(0.7);
    top: 180px;
  }

  .aboutMePhoto img:last-of-type {
    right: -27%;
    left: unset;
    transform: scale(0.8);
    top: 140px;
  }
}

@media screen and (max-width: 960px) {
  .aboutMePhoto img:last-of-type {
    right: -33%;
    top: 160px;
}
.aboutMePhoto img:first-of-type {
  right: -12%;
  
}
}

@media screen and (max-width: 890px) {
  .aboutMe {
    margin-top: 35px;
    z-index: 1;
    width: 340px;
    h1 {
      padding: 1rem 0rem;
      font-size: 50px;
    }
  }
  .aboutMePhoto img:first-of-type {
    right: -12%;
  }

  .aboutMePhoto img:last-of-type {
    right: -35%;
    left: unset;
    top: 180px;
  }
}



@media screen and (max-width: 770px) {
  .innerContent {
    flex-direction: column-reverse;
    align-items: center;
  }
  
  .aboutMeContent {
    height: unset;
    flex-direction: column-reverse;
    align-items: center;
  }
  .aboutMe {
    bottom: 100px;
    z-index: 1;
    //height: 800px;
    position: relative;
    padding: 3rem 0rem;
    h1 {
      font-size: 50px;
    }
  }
  .aboutMePhoto img:first-of-type {
    transform: translate(-50%);
    left: 50%;
    width: unset;
  }

  .aboutMePhoto img:last-of-type {
    transform: translate(-50%);
    left: 50%;
    width: unset;
  }
}

@media screen and (max-width: 560px) {
  .aboutMe {
    width: 350px;
    h1 {
      font-size: 45px;
    }
  }

  .aboutMePhoto img:first-of-type {
    transform: translate(-50%) scale(0.7);
    left: 50%;
    top: -35px;
  }

  .aboutMePhoto img:last-of-type {
    transform: translate(-50%) scale(0.7);
    left: 55%;
    width: unset;
    top: -50px;
  }
}

@media screen and (max-width: 430px) {
 .aboutMe{
  bottom: 400px;

 }
}
@media screen and (max-width: 390px) {
  .aboutMe {
    width: 300px;
  }

  .aboutMePhoto img:first-of-type {
    transform: translate(-50%) scale(0.55);
    left: 45%;
    width: 580px;
    top: 35px;
  }

  .aboutMePhoto img:last-of-type {
    width: unset;
    transform: translate(-50%) scale(0.50);   
     left: 55%;
    top: -35px;

  }
}

@media screen and (min-width: 3840px) and (min-height:1440px) {
  .aboutMe{
    scale: 1.5;
    margin-left: 150px;
    margin-top: -5px;
  }
  .aboutMePhoto{
    scale: 1.5;
  }
  

}

@media screen and (min-width: 5120px) and (min-height:2880px) {
.aboutMeContent{
  height: 950px;
}
}

@media screen and (min-width: 1536px) and (max-height:995px) {
  .aboutMeContent{
    height: 750px;
    overflow: unset;
    img:first-of-type {
      right: 15%;
    }
  }
  
  }

